# ares-trading-engine

./: .gitignore  Cargo.toml  EXTRACTION_SUMMARY.md  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: chronofabric.rs  lib.rs  main.rs  resonance_trading.rs
