[package]
name = "ares-trading-engine"
version = "0.1.0"
edition = "2021"
authors = ["Ididia Serfaty <ididiaserfaty@protonmail.com>"]
license = "MIT"
description = "Standalone ARES Trading Engine with Dynamic Resonance Phase Processing"
repository = "https://github.com/ididiaserfaty/ares-trading-engine"
homepage = "https://github.com/ididiaserfaty/ares-trading-engine"

[dependencies]
# Core dependencies
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Market data
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rust_decimal = "1.36"
rust_decimal_macros = "1.36"

# Database (temporarily disabled)
# sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "rust_decimal"] }

# ARES ChronoFabric Engine (external dependency)
# When deploying as standalone, this can reference the published crate or local monorepo
ares-chronofabric = { git = "https://github.com/1onlyadvance/CSF", branch = "feature/unified-sdk-implementation", optional = true }
# ares-chronofabric = { path = "../ares-monorepo", optional = true }

# Math
nalgebra = "0.33"
num-complex = "0.4"
statrs = "0.17"
rustfft = "6.2"
rand = "0.8"

# Monitoring
prometheus = { version = "0.13", features = ["process"] }
hyper = { version = "0.14", features = ["server", "http1", "http2"] }

# Other
uuid = { version = "1.11", features = ["v4", "serde"] }

[features]
default = []
chronofabric-integration = []

[[bin]]
name = "ares-trader"
path = "src/main.rs"

[workspace]
